--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.3",
     "mongoose": "^5.4.6",
+    "nodemon": "^2.0.20",
     "passport": "^0.6.0"
   }
 }
